refactor(smartfridge): Use formatted() instead of String concatenation or String.format()